--- a/static/css/hugo-easy-gallery.css
+++ b/static/css/hugo-easy-gallery.css
@@ -118,7 +118,7 @@ figcaption styles
     left: 0;
     right: 0;
     background: #000;
-    color: #FFF;
+    color: transparent;
     text-align: center;
     font-size: 75%; /* change this if you want bigger text */
     background: rgba(0, 0, 0, 0.5);
