--- a/themes/hugo-universal-theme/layouts/partials/headers.html
+++ b/themes/hugo-universal-theme/layouts/partials/headers.html
@@ -20,7 +20,7 @@
 <link href='/fonts/google.css' rel='stylesheet' type='text/css'>
 
 <!-- Bootstrap and Font Awesome CSS -->
-<link rel="stylesheet" href="/fonts/fontawesome.css">
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="/fonts/bootstrapcdn.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- CSS animations  -->
